# rust-ida

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE  README.md
benches/: dense.rs
crates/ida/: Cargo.toml
crates/ida/examples/: roberts.rs
crates/ida/src/: constants.rs  error.rs  ida_io.rs  ida_ls.rs  ida_nls.rs  impl_new.rs  lib.rs  sundials.rs  tol_control.rs  traits.rs
crates/ida/src/private/: complete_step.rs  linear_problem.rs  mod.rs  nonlinear_problem.rs  root_finding.rs  solve.rs  stop_test.rs
crates/ida/src/sundials/: adapter.rs  mod.rs  roberts.rs
crates/ida/src/tests/: complete_step.rs  get_dky.rs  get_solution.rs  mod.rs  nonlinear_solve.rs  predict.rs  restore.rs  root_finding.rs  set_coeffs.rs  test_error.rs
crates/ida/src/tests/data/: get_solution_post.json  rcheck1_post.json  rcheck1_pre.json  rcheck3_post.json  rcheck3_pre.json
crates/linear/: Cargo.toml
crates/linear/src/: dense.rs  lib.rs  traits.rs
crates/nonlinear/: Cargo.toml
crates/nonlinear/src/: lib.rs  newton.rs  norm_wrms.rs  traits.rs
crates/sample_problems/: Cargo.toml
crates/sample_problems/src/: dummy.rs  lib.rs  roberts.rs
examples/: roberts.rs
scripts/: data_trace.ipynb
src/: constants.rs  error.rs  example_problems.rs  ida.rs  ida_io.rs  ida_ls.rs  ida_nls.rs  impl_complete_step.rs  impl_r_check.rs  impl_solve.rs  impl_stop_test.rs  lib.rs  lorenz63.rs  norm_rms.rs  r_check.rs  solve.rs  stop_test.rs  tol_control.rs  traits.rs
src/linear/: dense.rs  mod.rs
src/nonlinear/: mod.rs  newton.rs  traits.rs
src/sample_problems/: mod.rs  roberts.rs  slider_crank.rs
src/tests/: complete_step.rs  example_problems.rs  get_solution.rs  mod.rs  nonlinear_solve.rs  predict.rs  restore.rs  set_coeffs.rs  test_error.rs
tests/: lorenz63.rs  roberts.rs
