[package]
name = "ida"
edition = "2018"
version = "0.1.1"
authors = ["John Hughes <jondo2010@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://gitlab.com/jondo2010/rust-ida"
documentation = "https://docs.rs/ida"
homepage = "https://gitlab.com/jondo2010/rust-ida"
description = """
A pure Rust port of the Implicit Differential-Algebraic solver from the Sundials suite.
"""
categories = ["science", "simulation"]
keywords = ["math", "differential"]

[badges]
gitlab = { repository = "jondo2010/rust-ida", branch = "master" }

[features]
# Required for testing using the profile_scope!() macro
thread_profiler = ["profiler"]
data_trace = ["serde", "serde_json"]

[dependencies]
log                 = { version = "0.4.6", features = ["std"] }
failure             = { version = "0.1.5" }
ndarray             = { version = "0.12.1", default-features = true, features = ["serde-1"] }
num-traits          = { version = "0.2.6" }

profiler            = { package = "thread_profiler", version = "0.3.0", optional = true }
serde               = { version = "1.0.90", features = ["derive"], optional = true }
serde_json          = { version = "1.0.39", optional = true}

[dev-dependencies]
criterion           = { version = "0.2.11" }
pretty_env_logger   = { version = "0.3" }
prettytable-rs      = { version = "0.8.0" }
nearly_eq           = { version = "0.2.4", features = ["ndarray"] }
approx              = { version = "0.3.2" }
ndarray-rand        = { version = "0.9.0" }
rand                = { version = "0.6.5" }

[[bench]]
name = "dense"
harness = false

[profile.release]
debug = true
