[workspace]
members = [
    "crates/ida",
    "crates/linear",
    "crates/nonlinear",
    "crates/sample_problems",
]

[workspace.package]
name = "ida"
edition = "2021"
version = "0.1.1"
authors = ["John Hughes <jondo2010@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://gitlab.com/jondo2010/rust-ida"
documentation = "https://docs.rs/ida"
homepage = "https://gitlab.com/jondo2010/rust-ida"
description = "A pure Rust port of the Implicit Differential-Algebraic solver from the Sundials suite."
categories = ["science", "simulation"]
keywords = ["math", "differential"]

#[badges]
#gitlab = { repository = "jondo2010/rust-ida", branch = "master" }
#

[workspace.dependencies]
approx = { version = "0.5" }
nalgebra = { version = "0.32" }
num-traits = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
simba = { version = "0.8", default-features = false }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }

ida = { path = "crates/ida" }
linear = { path = "crates/linear" }
nonlinear = { path = "crates/nonlinear" }
sample_problems = { path = "crates/sample_problems" }

#profiler            = { package = "thread_profiler", version = "0.3.0", optional = true }

#[workspace.dev-dependencies]
#criterion           = { version = "0.2.11" }
#pretty_env_logger   = { version = "0.3" }
#prettytable-rs      = { version = "0.8.0" }
#nearly_eq           = { version = "0.2.4", features = ["ndarray"] }
##approx              = { version = "0.3.2" }
#ndarray-rand        = { version = "0.9.0" }
#rand                = { version = "0.6.5" }
#sundials-sys        = { version = "0.2" }
#
#[[bench]]
#name = "dense"
#harness = false

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 2

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[profile.bench]
debug = false
lto = true
opt-level = 3
