[package]
name = "ida"
description = "Main IDA crate"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
#rust-version.workspace = true

[features]
default = ["serde-serialize", "sundials-sys"]
serde-serialize = [
    "serde",
    "serde_json",
    "nalgebra/serde-serialize",
    "nonlinear/serde-serialize",
]
## Required for testing using the profile_scope!() macro
#thread_profiler = ["profiler"]


[lib]

[dependencies]
tracing.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
simba.workspace = true
thiserror.workspace = true

linear.workspace = true
nonlinear.workspace = true

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sundials-sys = { version = "0.2", path = "../../../sundials-sys", default-features = false, features = [
    "ida",
], optional = true }

[dev-dependencies]
approx.workspace = true

tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
