[package]
name = "linear"
description = "Linear solvers"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
#rust-version.workspace = true

[lib]

[dependencies]
nalgebra.workspace = true
thiserror.workspace = true
num-traits.workspace = true

[dev-dependencies]
approx.workspace = true