[package]
name = "linear"
description = "Linear solvers"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
#rust-version.workspace = true

[features]
default = ["serde-serialize"]
serde-serialize = ["serde", "nalgebra/serde-serialize"]

[lib]

[dependencies]
nalgebra.workspace = true
num-traits.workspace = true
thiserror.workspace = true
tracing.workspace = true

serde = { workspace = true, optional = true}

[dev-dependencies]
approx.workspace = true
