[package]
name = "nonlinear"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[features]
default = ["serde-serialize"]
serde-serialize = ["serde", "nalgebra/serde-serialize"]

[dependencies]
nalgebra.workspace = true
num-traits.workspace = true
thiserror.workspace = true

linear = { path = "../linear" }

serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
approx.workspace = true
