[package]
name = "nonlinear"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[features]
default = ["serde-serialize"]
serde-serialize = ["serde", "nalgebra/serde-serialize"]

[dependencies]
nalgebra.workspace = true
num-traits.workspace = true
thiserror.workspace = true
tracing.workspace = true

linear = { path = "../linear" }

serde = { workspace = true, optional = true}

[dev-dependencies]
approx.workspace = true
