[package]
name = "sample_problems"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
#rust-version.workspace = true

[lib]

[dependencies]
nalgebra.workspace = true
thiserror.workspace = true
num-traits.workspace = true

ida.workspace = true

[dev-dependencies]
approx.workspace = true